Temporary fix for flickering button

--- a/client/src/assets/style.css
+++ b/client/src/assets/style.css
@@ -66,14 +66,10 @@ body {
     letter-spacing: 1px;
     cursor: pointer;
     box-shadow: inset 0 0 0 0 #D80286;
-    -webkit-transition: ease-out 0.5s;
-    -moz-transition: ease-out 0.5s;
-    transition: ease-out 0.5s;
 }
 
 .slide_right:hover {
     box-shadow: inset 400px 0 0 0 #D80286;
-    transition: 0.5s;
 }
 
 
